--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Space Invaders</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <style>
 body {
   background: #000;
@@ -23,12 +23,17 @@ button {
   background: rgba(40,40,40,0.7);
   border: 1px solid #aaa;
   color: white;
-  padding: 6px 10px;
-  font-size: 14px;
+  padding: 10px 15px; /* Más grande para dedos en Android */
+  font-size: 16px;
   cursor: pointer;
 }
-button:hover { background: rgba(80,80,80,0.7); }
-canvas { display: block; margin: 0 auto; image-rendering: pixelated; }
+canvas { 
+  display: block; 
+  margin: 0 auto; 
+  image-rendering: pixelated; 
+  max-width: 100vw; 
+  max-height: 100vh; 
+}
 </style>
 </head>
 <body>
@@ -37,8 +42,7 @@ canvas { display: block; margin: 0 auto; image-rendering: pixelated; }
   <button id="btnMute">Mute</button>
 </div>
 <canvas id="canvas"></canvas>
-<script src="game.js"></script>
+
 <script src="loader.js"></script>
 </body>
 </html>
-
